--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/styles_feeling_responsive.css">
-	<script src="{{ hatyairoiroi.github.io }}/assets/js/modernizr.min.js"></script>
+	<script src="{{ site.url }}/assets/js/modernizr.min.js"></script>
 	
   <script>
     WebFontConfig = {
