--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,7 +19,7 @@
         /____/                                 /____/                          
 
 {% endcomment %}
-      <ul class="right">
+      <ul class="left">
         {% for link in site.data.navigation %}
 
               {% if link.url contains 'http' %}
