--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,7 +19,7 @@
         /____/                                 /____/                          
 
 {% endcomment %}
-      <ul class="left">
+      <ul class="right">
         {% for link in site.data.navigation %}
 
               {% if link.url contains 'http' %}
@@ -73,7 +73,7 @@
                                           /____/                          
 
 {% endcomment %}
-      <ul class="left">
+      <ul class="right">
         {% for link in site.data.navigation %}
 
               {% if link.url contains 'http' %}
