--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -73,7 +73,7 @@
                                           /____/                          
 
 {% endcomment %}
-      <ul class="right">
+      <ul class="left">
         {% for link in site.data.navigation %}
 
               {% if link.url contains 'http' %}
