--- a/_sass/_06_typography.scss
+++ b/_sass/_06_typography.scss
@@ -338,7 +338,7 @@ mark {
 ------------------------------------------------------------------- */
 
 @font-face {
-  font-family: 'iconfont';
+  font-family: 'Waffle Regular';
   src: url('../fonts/iconfont.eot'); /* IE9 Compat Modes */
   src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('../fonts/iconfont.woff') format('woff'), /* Pretty Modern Browsers */
