--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -17,7 +17,7 @@
 
 $text-color:       	#111;
 $body-font-color: 	$text-color;
-$body-bg: 			#FFFACD;
+$body-bg: 			#FFF5EE;
 
 
 
@@ -71,7 +71,7 @@ $grey-16: #0B0B0B;
 /* Topbar-Navigation
 ------------------------------------------------------------------- */
 
-$topbar-bg-color: #fff;
+$topbar-bg-color: #fffacd;
 
 $topbar-dropdown-toggle-color: $ci-1;
 
