--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -71,7 +71,7 @@ $grey-16: #0B0B0B;
 /* Topbar-Navigation
 ------------------------------------------------------------------- */
 
-$topbar-bg-color: #DD984E;
+$topbar-bg-color: $ci-2;
 
 $topbar-dropdown-toggle-color: #fffacd;
 
