--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -71,14 +71,14 @@ $grey-16: #0B0B0B;
 /* Topbar-Navigation
 ------------------------------------------------------------------- */
 
-$topbar-bg-color: $ci-2;
+$topbar-bg-color: #fffacd;
 
 $topbar-dropdown-toggle-color: #fffacd;
 
-$topbar-link-color: #000;
-$topbar-link-color-hover: #000;
-$topbar-link-color-active: #000;
-$topbar-link-color-active-hover: #000;
+$topbar-link-color: #fffacd;
+$topbar-link-color-hover: #fffacd;
+$topbar-link-color-active: #fffacd;
+$topbar-link-color-active-hover: #fffacd;
 
 $topbar-dropdown-label-color: $ci-2;
 $topbar-dropdown-link-bg-hover: $ci-6;
