--- a/_sass/_05_settings_top-bar.scss
+++ b/_sass/_05_settings_top-bar.scss
@@ -5,7 +5,7 @@
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: #fffacd;
+$topbar-bg-color: #DAB806;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
