--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -80,8 +80,8 @@ $topbar-link-color-hover: #000;
 $topbar-link-color-active: #000;
 $topbar-link-color-active-hover: #000;
 
-$topbar-dropdown-label-color: $ci-2;
-$topbar-dropdown-link-bg-hover: $ci-6;
+$topbar-dropdown-label-color: #F3DB9D;
+$topbar-dropdown-link-bg-hover: #BE9304;
 
 $topbar-link-bg-active: $ci-6; // Active Navigation Link
 $topbar-link-bg-hover: $ci-6;
