--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -83,7 +83,7 @@ $topbar-link-color-active-hover: #000;
 $topbar-dropdown-label-color: #F3DB9D;
 $topbar-dropdown-link-bg-hover: #BE9304;
 
-$topbar-link-bg-active: $ci-6; // Active Navigation Link
+$topbar-link-bg-active: #F3DB9D; // Active Navigation Link
 $topbar-link-bg-hover: $ci-6;
 $topbar-link-bg-active-hover: $ci-2;
 
