--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -84,8 +84,8 @@ $topbar-dropdown-label-color: #F3DB9D;
 $topbar-dropdown-link-bg-hover: #BE9304;
 
 $topbar-link-bg-active: #F3DB9D; // Active Navigation Link
-$topbar-link-bg-hover: $ci-6;
-$topbar-link-bg-active-hover: $ci-2;
+$topbar-link-bg-hover: #F3DB9D;
+$topbar-link-bg-active-hover: #F3DB9D;
 
 
 $topbar-dropdown-bg: $ci-6; // Background Mobile Navigation
