--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -96,8 +96,8 @@ $topbar-menu-link-color-toggled: #F3DB9D;
 $topbar-menu-icon-color-toggled: #F3DB9D;
 $topbar-menu-link-color: #000;
 $topbar-menu-icon-color: #000;
-$topbar-menu-link-color-toggled: $ci-6;
-$topbar-menu-icon-color-toggled: $ci-6;
+$topbar-menu-link-color-toggled: #F3EEB7;
+$topbar-menu-icon-color-toggled: #F3EEB7;
 
 
 
