--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -88,9 +88,9 @@ $topbar-link-bg-hover: #F3DB9D;
 $topbar-link-bg-active-hover: #F3DB9D;
 
 
-$topbar-dropdown-bg: $ci-6; // Background Mobile Navigation
+$topbar-dropdown-bg: #F3EEB7; // Background Mobile Navigation
 $topbar-dropdown-link-color: #000;
-$topbar-dropdown-link-bg: $ci-2;
+$topbar-dropdown-link-bg: #F3EEB7;
 
 $topbar-menu-link-color-toggled: #F3DB9D;
 $topbar-menu-icon-color-toggled: #F3DB9D;
