--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -83,7 +83,7 @@ $topbar-link-color-active-hover: #000;
 $topbar-dropdown-label-color: #F3DB9D;
 $topbar-dropdown-link-bg-hover: #BE9304;
 
-$topbar-link-bg-active: #F3DB9D; // Active Navigation Link
+$topbar-link-bg-active: #F3685C; // Active Navigation Link
 $topbar-link-bg-hover: #F3DB9D;
 $topbar-link-bg-active-hover: #F3DB9D;
 
@@ -92,8 +92,8 @@ $topbar-dropdown-bg: #F3EEB7; // Background Mobile Navigation
 $topbar-dropdown-link-color: #000;
 $topbar-dropdown-link-bg: #F3EEB7;
 
-$topbar-menu-link-color-toggled: #F3DB9D;
-$topbar-menu-icon-color-toggled: #F3DB9D;
+$topbar-menu-link-color-toggled: #F3685C;
+$topbar-menu-icon-color-toggled: #F3685C;
 $topbar-menu-link-color: #000;
 $topbar-menu-icon-color: #000;
 $topbar-menu-link-color-toggled: #F3EEB7;
