--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -73,7 +73,7 @@ $grey-16: #0B0B0B;
 
 $topbar-bg-color: #DAB806;
 
-$topbar-dropdown-toggle-color: #fff;
+$topbar-dropdown-toggle-color: #F3685C;
 
 $topbar-link-color: #000;
 $topbar-link-color-hover: #000;
