--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -80,8 +80,8 @@ $topbar-link-color-hover: #000;
 $topbar-link-color-active: #000;
 $topbar-link-color-active-hover: #000;
 
-$topbar-dropdown-label-color: #F3DB9D;
-$topbar-dropdown-link-bg-hover: #BE9304;
+$topbar-dropdown-label-color: #D8795C;
+$topbar-dropdown-link-bg-hover: #D8795C;
 
 $topbar-link-bg-active: #F3685C; // Active Navigation Link
 $topbar-link-bg-hover: #F3DB9D;
