--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -75,10 +75,10 @@ $topbar-bg-color: #DAB806;
 
 $topbar-dropdown-toggle-color: #F3685C;
 
-$topbar-link-color: #000;
-$topbar-link-color-hover: #000;
-$topbar-link-color-active: #000;
-$topbar-link-color-active-hover: #000;
+$topbar-link-color: #D8795C;
+$topbar-link-color-hover: #D8795C;
+$topbar-link-color-active: #D8795C;
+$topbar-link-color-active-hover: #D8795C;
 
 $topbar-dropdown-label-color: #D8795C;
 $topbar-dropdown-link-bg-hover: #D8795C;
