--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -77,7 +77,7 @@ $topbar-dropdown-toggle-color: #F3685C;
 
 $topbar-link-color: #D8795C;
 $topbar-link-color-hover: #D8795C;
-$topbar-link-color-active: #D8795C;
+$topbar-link-color-active: #000;
 $topbar-link-color-active-hover: #D8795C;
 
 $topbar-dropdown-label-color: #D8795C;
