--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -78,7 +78,7 @@ $topbar-dropdown-toggle-color: #F3685C;
 $topbar-link-color: #D8795C;
 $topbar-link-color-hover: #D8795C;
 $topbar-link-color-active: #000;
-$topbar-link-color-active-hover: #D8795C;
+$topbar-link-color-active-hover: #000;
 
 $topbar-dropdown-label-color: #D8795C;
 $topbar-dropdown-link-bg-hover: #D8795C;
