--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -76,7 +76,7 @@ $topbar-bg-color: #DAB806;
 $topbar-dropdown-toggle-color: #F3685C;
 
 $topbar-link-color: #D8795C;
-$topbar-link-color-hover: #D8795C;
+$topbar-link-color-hover: #000;
 $topbar-link-color-active: #000;
 $topbar-link-color-active-hover: #000;
 
