--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -92,11 +92,11 @@ $topbar-dropdown-bg: #F3EEB7; // Background Mobile Navigation
 $topbar-dropdown-link-color: #000;
 $topbar-dropdown-link-bg: #F3EEB7;
 
-$topbar-menu-link-color-toggled: #F3685C;
+$topbar-menu-link-color-toggled: #FFA189;
 $topbar-menu-icon-color-toggled: #F3685C;
 $topbar-menu-link-color: #000;
 $topbar-menu-icon-color: #000;
-$topbar-menu-link-color-toggled: #F3685C;
+$topbar-menu-link-color-toggled: #FFA189;
 $topbar-menu-icon-color-toggled: #F3685C;
 
 
