--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -83,7 +83,7 @@ $topbar-link-color-active-hover: #000;
 $topbar-dropdown-label-color: #D8795C;
 $topbar-dropdown-link-bg-hover: #D8795C;
 
-$topbar-link-bg-active: #F3685C; // Active Navigation Link
+$topbar-link-bg-active: #FFE8FF; // Active Navigation Link
 $topbar-link-bg-hover: #F3685C;
 $topbar-link-bg-active-hover: #F3685C;
 
