--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -83,9 +83,9 @@ $topbar-link-color-active-hover: #000;
 $topbar-dropdown-label-color: #D8795C;
 $topbar-dropdown-link-bg-hover: #D8795C;
 
-$topbar-link-bg-active: #FFE8FF; // Active Navigation Link
-$topbar-link-bg-hover: #F3685C;
-$topbar-link-bg-active-hover: #F3685C;
+$topbar-link-bg-active: #F3685C; // Active Navigation Link
+$topbar-link-bg-hover: #FFE8FF;
+$topbar-link-bg-active-hover: #FFE8FF;
 
 
 $topbar-dropdown-bg: #F3EEB7; // Background Mobile Navigation
