--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,7 +24,7 @@ format: post
 
 				<span itemprop="name">
 					{% if page.subheadline %}<p class="subheadline">{{ page.subheadline }}</p>{% endif %}
-					<h1> <p align = "center">{{ page.title }} </p></h1>
+					<h1 align="center">{{ page.title }}</h1>
 				</span>
 			</header>
 
